bin_PROGRAMS = vcmiclient
BUILT_SOURCES = StdInc.h.gch
StdInc.h.gch: StdInc.h
	$(CXXCOMPILE) -c $<

vcmiclient_LDADD = $(top_builddir)/lib/libvcmi.la @SDL_LIBS@ @FFMPEG_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_THREAD_LIB@ @BOOST_IOSTREAMS_LIB@ -lrt -lz
vcmiclient_CXXFLAGS = @SDL_CFLAGS@ @FFMPEG_CXXFLAGS@
vcmiclient_LDFLAGS = -L$(top_builddir)/lib
vcmiclient_SOURCES =  \
	../CCallback.cpp \
	../CCallback.h \
	./BattleInterface/CAttackAnimation.cpp \
	./BattleInterface/CAttackAnimation.h \
	./BattleInterface/CBattleAnimation.cpp \
	./BattleInterface/CBattleAnimation.h \
	./BattleInterface/CBattleConsole.cpp \
	./BattleInterface/CBattleConsole.h \
	./BattleInterface/CBattleHero.cpp \
	./BattleInterface/CBattleHero.h \
	./BattleInterface/CBattleInterface.cpp \
	./BattleInterface/CBattleInterface.h \
	./BattleInterface/CBattleOptionsWindow.cpp \
	./BattleInterface/CBattleOptionsWindow.h \
	./BattleInterface/CBattleResultWindow.cpp \
	./BattleInterface/CBattleResultWindow.h \
	./BattleInterface/CBattleStackAnimation.cpp \
	./BattleInterface/CBattleStackAnimation.h \
	./BattleInterface/CCreatureAnimation.h \
	./BattleInterface/CCreatureAnimation.cpp \
	./BattleInterface/CDefenceAnimation.cpp \
	./BattleInterface/CDefenceAnimation.h \
	./BattleInterface/CDummyAnimation.cpp \
	./BattleInterface/CDummyAnimation.h \
	./BattleInterface/CClickableHex.cpp \
	./BattleInterface/CClickableHex.h \
	./BattleInterface/CMeleeAttackAnimation.cpp \
	./BattleInterface/CMeleeAttackAnimation.h \
	./BattleInterface/CMovementAnimation.cpp \
	./BattleInterface/CMovementAnimation.h \
	./BattleInterface/CMovementEndAnimation.cpp \
	./BattleInterface/CMovementEndAnimation.h \
	./BattleInterface/CMovementStartAnimation.cpp \
	./BattleInterface/CMovementStartAnimation.h \
	./BattleInterface/CReverseAnimation.cpp \
	./BattleInterface/CReverseAnimation.h \
	./BattleInterface/CShootingAnimation.cpp \
	./BattleInterface/CShootingAnimation.h \
	./BattleInterface/CSpellEffectAnimation.cpp \
	./BattleInterface/CSpellEffectAnimation.h \
	./BattleInterface/CStackQueue.cpp \
	./BattleInterface/CStackQueue.h \
	./BattleInterface/SStackAttackedInfo.h \
	./UIFramework/CGuiHandler.cpp \
	./UIFramework/CGuiHandler.h \
	./UIFramework/CIntObject.cpp \
	./UIFramework/CIntObject.h \
	./UIFramework/CKeyShortcut.cpp \
	./UIFramework/CKeyShortcut.h \
	./UIFramework/CPicture.cpp \
	./UIFramework/CPicture.h \
	./UIFramework/SRect.cpp \
	./UIFramework/SRect.h \
	AdventureMapButton.cpp \
	AdventureMapButton.h \
	CAdvmapInterface.cpp \
	CAdvmapInterface.h \
	CAnimation.cpp \
	CAnimation.h \
	CBitmapHandler.cpp \
	CBitmapHandler.h \
	CCastleInterface.cpp \
	CCastleInterface.h \
	CConfigHandler.cpp \
	CConfigHandler.h \
	CCreatureWindow.cpp \
	CCreatureWindow.h \
	CCursorHandler.cpp \
	CCursorHandler.h \
	CDefHandler.cpp \
	CDefHandler.h \
	CGameInfo.cpp \
	CGameInfo.h \
	CHeroWindow.cpp \
	CHeroWindow.h \
	CKingdomInterface.cpp \
	CKingdomInterface.h \
	Client.cpp \
	Client.h \
	CMessage.cpp \
	CMessage.h \
	CMT.cpp \
	CMusicBase.h \
	CMusicHandler.cpp \
	CMusicHandler.h \
	CPlayerInterface.cpp \
	CPlayerInterface.h \
	CPreGame.cpp \
	CPreGame.h \
	CSndHandler.cpp \
	CSndHandler.h \
	CSoundBase.h \
	CSpellWindow.cpp \
	CSpellWindow.h \
	CVideoHandler.cpp \
	CVideoHandler.h \
	FontBase.h \
	FunctionList.h \
	Graphics.cpp \
	Graphics.h \
	GUIClasses.cpp \
	GUIClasses.h \
	mapHandler.cpp \
	mapHandler.h \
	NetPacksClient.cpp \
	SDL_Extensions.cpp \
	SDL_Extensions.h \
	SDL_framerate.cpp \
	SDL_framerate.h
